# conquer-your-universe

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  wrangler.jsonc
.github/workflows/: deploy.yml  rust.yml
src/: App.tsx  components.rs  constants.rs  constants.ts  galaxy_system.rs  game_engine.rs  infoEntries.ts  main.rs  persistence.ts  planet_system.rs  prestige_system.rs  resource_system.rs  style.css  supply_chain.rs  transport_system.rs  types.rs  types.ts
src/app/: helpers.rs  helpers.ts  mod.rs  types.ts
src/app/drawing/: coinProjectile.ts  crop.ts  cropProjectile.ts  farm.ts  grainPile.ts  grainProjectile.ts  harvester.ts  house.ts  index.ts  market.ts  researcher.ts
src/app/effects/: mod.rs  restore.rs  save.rs  usePeriodicSave.ts  useRestoreState.ts
src/app/effects/render/: active.rs  active.ts  index.ts  mod.rs  paused.rs  paused.ts
src/app/handlers/: canvas.rs  canvas.ts  index.ts  menu.rs  menu.ts  mod.rs  modal.rs  modal.ts  storage.rs  storage.ts
src/app/research/: effects.ts  nodes.ts
src/app/state/: simulationSnapshot.ts
src/app/view/: AppView.tsx  CanvasArea.tsx  Footer.tsx  Header.tsx  Modal.tsx  Prompt.tsx  ResearchTree.tsx  Stats.tsx  ToastStack.tsx  canvas.rs  header.rs  mod.rs  modal.rs  prompt.rs  stats.rs
src/utils/: compression.ts  easing.ts
