[package]
name = "conquer-your-universe"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "MouseEvent",
  "DomRect",
  "SvgsvgElement",
  "Performance",
] }
js-sys = "0.3"
gloo-timers = "0.3"
log = "0.4"
wasm-logger = "0.2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
gloo = { version = "0.11.0", features = ["storage"] }
